Added simple script hello and run-hello.cgi to all devices

--- a/simulated-botnet/devices/mips/Dockerfile
+++ b/simulated-botnet/devices/mips/Dockerfile
@@ -1,5 +1,6 @@
 FROM busybox:uclibc
 COPY qemu-mips-static /usr/bin/
 COPY startup.sh /startup.sh
+COPY www/ /www
 RUN chmod +x /startup.sh
 CMD ["/startup.sh"]
